Update docker for experiments

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -4,9 +4,13 @@ ENV CERES_VERSION="1.12.0"
 ENV PCL_VERSION="1.8.0"
 ENV CATKIN_WS=/root/catkin_ws
 
+ENV http_proxy http://127.0.0.1:7890
+ENV https_proxy http://127.0.0.1:7890
+
     # setup processors number used to compile library
 RUN if [ "x$(nproc)" = "x1" ] ; then export USE_PROC=1 ; else export USE_PROC=$(($(nproc)/2)) ; fi && \
     # Install dependencies
+      sed -i 's/archive.ubuntu.com/mirrors.ustc.edu.cn/g' /etc/apt/sources.list && \
       apt-get update && apt-get install -y \
       cmake \
       libatlas-base-dev \
@@ -17,8 +21,11 @@ RUN if [ "x$(nproc)" = "x1" ] ; then export USE_PROC=1 ; else export USE_PROC=$(
       ros-${ROS_DISTRO}-cv-bridge \
       ros-${ROS_DISTRO}-image-transport \
       ros-${ROS_DISTRO}-message-filters \
+      ros-${ROS_DISTRO}-rviz \
       ros-${ROS_DISTRO}-tf && \
     rm -rf /var/lib/apt/lists/* && \
+    git config --global http.proxy http://127.0.0.1:7890/ && \
+    git config --global https.proxy https://127.0.0.1:7890/ && \
     # Build and install Ceres
     git clone https://ceres-solver.googlesource.com/ceres-solver && \
     cd ceres-solver && \
@@ -30,6 +37,8 @@ RUN if [ "x$(nproc)" = "x1" ] ; then export USE_PROC=1 ; else export USE_PROC=$(
     rm -rf ./ceres-solver && \
     # Build and install pcl
     git clone https://github.com/PointCloudLibrary/pcl.git && \
+    git config --global --unset http.proxy && \
+    git config --global --unset https.proxy && \
     cd pcl && \
     git checkout tags/pcl-${PCL_VERSION} && \
     mkdir build && cd build && \
@@ -43,18 +52,18 @@ RUN if [ "x$(nproc)" = "x1" ] ; then export USE_PROC=1 ; else export USE_PROC=$(
 # WORKDIR $CATKIN_WS/src
 
 # Copy A-LOAM
-COPY ./ $CATKIN_WS/src/A-LOAM/
+# COPY ./ $CATKIN_WS/src/A-LOAM/
 # use the following line if you only have this dockerfile
 # RUN git clone https://github.com/HKUST-Aerial-Robotics/A-LOAM.git
 
 # Build A-LOAM
-WORKDIR $CATKIN_WS
-ENV TERM xterm
-ENV PYTHONIOENCODING UTF-8
-RUN catkin config \
-      --extend /opt/ros/$ROS_DISTRO \
-      --cmake-args \
-        -DCMAKE_BUILD_TYPE=Release && \
-    catkin build && \
-    sed -i '/exec "$@"/i \
-            source "/root/catkin_ws/devel/setup.bash"' /ros_entrypoint.sh
+#WORKDIR $CATKIN_WS
+# ENV TERM xterm
+# ENV PYTHONIOENCODING UTF-8
+# RUN catkin config \
+#       --extend /opt/ros/$ROS_DISTRO \
+#       --cmake-args \
+#         -DCMAKE_BUILD_TYPE=Release && \
+#     catkin build && \
+#     sed -i '/exec "$@"/i \
+#             source "/root/catkin_ws/devel/setup.bash"' /ros_entrypoint.sh
